# amazon-sp-api-clients

./: .gitignore  README.md  make_doc.py  manage.py  pyproject.toml  requirements.txt  run.py  setup.py  test_main.py  upload.py
amazon_sp_api_clients/: __init__.py  aplus_content_2020_11_01.py  authorization_v1.py  base.py  catalog_items_2020_12_01.py  catalog_items_2022_04_01.py  catalog_items_v0.py  data_kiosk_2023_11_15.py  fba_inbound_eligibility.py  fba_inbound_eligibility_v1.py  fba_inventory_v1.py  fba_small_and_light_v1.py  feed_types.py  feeds_2020_09_04.py  feeds_2021_06_30.py  finances.py  finances_v0.py  fulfillment_inbound.py  fulfillment_inbound_v0.py  fulfillment_outbound_2020_07_01.py  listings_items_2020_09_01.py  listings_items_2021_08_01.py  listings_restrictions_2021_08_01.py  marketplaces.py  merchant_fulfillment.py  merchant_fulfillment_v0.py  messaging_v1.py  notifications.py  notifications_v1.py  orders_v0.py  product_fees.py  product_fees_v0.py  product_pricing.py  product_pricing_2022_05_01.py  product_pricing_v0.py  product_type_definitions_2020_09_01.py  replenishment_2022_11_07.py  report_types.py  reports.py  reports_2020_09_04.py  (+27 more)
amazon_sp_api_clients_2/: __init__.py
amazon_sp_api_static/: __init__.py  base.py  marketplaces.py  report_types.py
api_generator/: generator.py  main.py  settings.py  utils.py  views.py
scripts/: convert_to_openapi_3.py  generate_clients.py  generate_feed_types.py  generate_report_types.py  generator.py  move_to_swagger_2_apis_directory.py  open_api_model.py
sp_api_clients/: __init__.py  authorization.py  cache.py  catalog_items.py  fba_inbound_eligibility.py  fba_inventory.py  fba_small_and_light.py  feeds.py  finances.py  fulfillment_inbound.py  fulfillment_outbound.py  merchant_fulfillment.py  messaging.py  notifications.py  orders.py  product_fees.py  product_pricing.py  reports.py  sales.py  sellers.py  services.py  shipping.py  solicitations.py  uploads.py
sp_api_static/: base.py
swagger3_apis/: aplus_content_2020_11_01.json  authorization_v1.json  catalog_items.json  catalog_items_2020_12_01.json  catalog_items_2022_04_01.json  catalog_items_v0.json  data_kiosk_2023_11_15.json  fba_inbound_eligibility.json  fba_inbound_eligibility_v1.json  (+53 more)
(+116 files in other folders)
