[tool.poetry]
name = "amazon-sp-api-clients"
version = "1.8.11"
description = "Amazon selling partner api clients."
authors = ["Haoyu Pan <panhaoyu.china@outlook.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = 'README.md'

[tool.poetry.urls]
repository = "https://github.com/panhaoyu/sp-api-clients"

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.16.3"
boto3 = "^1.28.45"
requests = "^2.31.0"
cachetools = "^5.3.1"
pycryptodome = "^3.18.0"
chardet = "^5.2.0"
demjson3 = "^3.0.6"
[tool.poetry.group.dev.dependencies]
lxml = "^4.9.1"
lxml-stubs = "^0.4.0"
pytest = "^7.4.2"
jinja2 = "^3.1.2"
wheel = "^0.41.2"
twine = "^4.0.2"
beautifulsoup4 = "^4.12.2"
markdown = "^3.4.4"
recommonmark = "^0.7.1"
pydata-sphinx-theme = "^0.13.3"
cached-property = "^1.5.2"
openapi-schema-pydantic = "^1.2.4"
black = { version = "^23.9.1", python = ">=3.8" }
sphinx = { version = "^7.2.5", python = ">=3.8" }
sphinx-inplace = { version = "^0.0.7", python = ">=3.8" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
